# knowledge-db

./: .gitignore  AGENTS.md  README.md  config.yaml  pyproject.toml  sources.yaml
.opencode/goals/: state.json
docs/plans/: 2026-06-27-codebase-cleanup.md  2026-06-28-unified-indexing.md
docs/specs/: 2026-06-28-model2vec-hybrid-search.md  2026-06-28-unified-indexing-design.md
knowledge/: __init__.py  __main__.py  chunk.py  cli.py  config.py  db.py  embed.py  fetch.py  getter.py  indexer.py  normalize.py  search.py  sources.py
tests/: __init__.py  conftest.py  test_chunk.py  test_cli.py  test_cli_get.py  test_config.py  test_db.py  test_db_migration.py  test_embed.py  test_fetch.py  test_getter.py  test_indexer.py  test_indexer_hash.py  test_integration.py  test_normalize.py  test_search.py  test_sources.py  test_types.py
