[project]
name = "knowledge"
version = "0.1.0"
description = "Pentest knowledge database — semantic search over aggregated docs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=3.0",
    "torch>=2.0",
    "sqlite-vec>=0.1.9",
    "pyyaml>=6.0",
    "nbformat>=5.0",
    "numpy>=1.24",
    "pytest>=9.1.1",
]

[project.optional-dependencies]
dev = ["tqdm>=4.0", "pytest>=9.1.1", "flash-attn>=2.0,<3.0"]

[project.scripts]
knowledge-db = "knowledge.cli:main"
kdb = "knowledge.cli:main"
test = "pytest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
