[project]
name = "knowledge"
version = "0.1.0"
description = "Pentest knowledge database — FTS5 full-text search over aggregated docs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "nbformat>=5.0",
    "pytest>=9.1.1",
    "rst2gfm>=0.1.2",
]

[project.scripts]
knowledge-db = "knowledge.cli:main"
kdb = "knowledge.cli:main"
test = "pytest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
